{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 12,
  "lineage": "5a15fcec-1b54-3e71-7bc4-ed48147cfc6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:688184989092:loadbalancer/app/daenamu-cluster-alb/6d785c37a57e0bf6",
            "arn_suffix": "app/daenamu-cluster-alb/6d785c37a57e0bf6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "daenamu-cluster-alb-2077861861.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:688184989092:loadbalancer/app/daenamu-cluster-alb/6d785c37a57e0bf6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "daenamu-cluster-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b2c4c4ce8bd84ebb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cc1a21c487be0ca4"
              },
              {
                "subnet_id": "subnet-0eeadcc15994d4874"
              }
            ],
            "subnets": [
              "subnet-0cc1a21c487be0ca4",
              "subnet-0eeadcc15994d4874"
            ],
            "tags": {
              "Name": "daenamu-cluster-alb",
              "kubernetes.io/cluster/daenamu-cluster": "owned"
            },
            "tags_all": {
              "Name": "daenamu-cluster-alb",
              "kubernetes.io/cluster/daenamu-cluster": "owned"
            },
            "vpc_id": "vpc-0880e34bdd55d5dfc",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:688184989092:listener/app/daenamu-cluster-alb/6d785c37a57e0bf6/58cb1d541b9fc070",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:688184989092:targetgroup/daenamu-cluster-tg/f73381219a92023a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:688184989092:listener/app/daenamu-cluster-alb/6d785c37a57e0bf6/58cb1d541b9fc070",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:688184989092:loadbalancer/app/daenamu-cluster-alb/6d785c37a57e0bf6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:688184989092:targetgroup/daenamu-cluster-tg/f73381219a92023a",
            "arn_suffix": "targetgroup/daenamu-cluster-tg/f73381219a92023a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:688184989092:targetgroup/daenamu-cluster-tg/f73381219a92023a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:688184989092:loadbalancer/app/daenamu-cluster-alb/6d785c37a57e0bf6"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "daenamu-cluster-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0880e34bdd55d5dfc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:688184989092:security-group/sg-0b2c4c4ce8bd84ebb",
            "description": "Allow HTTP access to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2c4c4ce8bd84ebb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "daenamu-cluster-alb-sg",
            "name_prefix": "",
            "owner_id": "688184989092",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "daenamu-cluster-alb-sg",
              "kubernetes.io/cluster/daenamu-cluster": "owned"
            },
            "tags_all": {
              "Name": "daenamu-cluster-alb-sg",
              "kubernetes.io/cluster/daenamu-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0880e34bdd55d5dfc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    }
  ]
}